working in progress

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -10,4 +10,11 @@
   <declare-styleable name="whsInstalledApplicationsList">
       <attr name="title" format="string"/>
   </declare-styleable>
+  <declare-styleable name="whsPreferencesView">
+        <attr name="exampleString" format="string" />
+        <attr name="exampleDimension" format="dimension" />
+        <attr name="exampleColor" format="color" />
+        <attr name="exampleDrawable" format="color|reference" />
+    </declare-styleable>
+  
 </resources>
