--- a/res/layout/sample_preferences_view.xml
+++ b/res/layout/sample_preferences_view.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
     <su.whs.widgets.PreferencesView
         android:layout_width="300dp"
