--- a/res/layout/app_list_cb_item.xml
+++ b/res/layout/app_list_cb_item.xml
@@ -4,12 +4,15 @@
     android:layout_height="wrap_content" >
 
     <ImageView
-        android:id="@+id/appIcon"        
+        android:id="@+id/appIcon"
+        android:layout_width="@android:dimen/app_icon_size"
+        android:layout_height="@android:dimen/app_icon_size"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:layout_marginBottom="@dimen/app_list_item_margin"
+        android:layout_marginLeft="@dimen/app_list_item_margin"
+        android:layout_marginTop="@dimen/app_list_item_margin"
         android:contentDescription="@string/application_icon_txt"
-        android:layout_width="@android:dimen/app_icon_size"
-    	android:layout_height="@android:dimen/app_icon_size"
         android:scaleType="fitCenter" />
 
     <CheckBox
@@ -17,7 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/appIcon"
-        android:layout_alignParentRight="true" />
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="@dimen/app_list_item_margin" />
 
     <TextView
         android:id="@+id/appLabel"
@@ -25,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/appIcon"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="@dimen/app_list_item_margin"
         android:layout_toLeftOf="@+id/appSelected"
         android:layout_toRightOf="@+id/appIcon"
         android:text=""
