--- a/res/layout/pinbox_fragment.xml
+++ b/res/layout/pinbox_fragment.xml
@@ -7,135 +7,139 @@
     android:orientation="vertical"
     tools:ignore="HardcodedText" >
 
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:minWidth="@dimen/pincode_fragment_width" >
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1" >
 
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/n1"
+            android:textSize="@dimen/pin_pad_button_font_size"
+            android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/button1"
-                style="@android:style/Widget.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="1" />
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/n2"
+            android:textSize="@dimen/pin_pad_button_font_size"
+            android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/button2"
-                style="@android:style/Widget.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="2" />
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/n3"
+            android:textSize="@dimen/pin_pad_button_font_size"
+            android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/button3"
-                style="@android:style/Widget.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="3" />
-        </TableRow>
+    </LinearLayout>
 
-        <TableRow
-            android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1" >
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/n4" 
+            android:textSize="@dimen/pin_pad_button_font_size"
+            android:textStyle="bold"/>
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/n5"
+            android:textSize="@dimen/pin_pad_button_font_size"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/n6"
+            android:textSize="@dimen/pin_pad_button_font_size"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1" 
+        android:textSize="@dimen/pin_pad_button_font_size"
+        android:textStyle="bold">
+
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/n7" 
+            android:textSize="@dimen/pin_pad_button_font_size"
+            android:textStyle="bold"/>
+
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/n8" 
+            android:textSize="@dimen/pin_pad_button_font_size"
+            android:textStyle="bold"/>
+
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/n9" 
+            android:textSize="@dimen/pin_pad_button_font_size"
+            android:textStyle="bold"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1" 
+        >
+
+        <Button
+            android:id="@+id/space0"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" >
+            android:layout_weight="1"
+            android:visibility="invisible"
+            android:text=" " />
 
-            <Button
-                android:id="@+id/button4"
-                style="@android:style/Widget.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="4" />
+        <Button
+            android:id="@+id/button0"
+            android:layout_width="0dp"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:text="@string/n0" 
+            android:textSize="@dimen/pin_pad_button_font_size"
+            android:textStyle="bold"/>
 
-            <Button
-                android:id="@+id/button5"
-                style="@android:style/Widget.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="5" />
-
-            <Button
-                android:id="@+id/button6"
-                style="@android:style/Widget.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="6" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/space1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" >
-
-            <Button
-                android:id="@+id/button7"
-                style="@android:style/Widget.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="7" />
-
-            <Button
-                android:id="@+id/button8"
-                style="@android:style/Widget.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="8" />
-
-            <Button
-                android:id="@+id/button9"
-                style="@android:style/Widget.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="9" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" >
-
-            <Button
-                android:id="@+id/button"
-                style="@android:style/Widget.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="0"
-                android:visibility="invisible" />
-
-            <Button
-                android:id="@+id/button0"
-                style="@android:style/Widget.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_column="1"
-                android:layout_gravity="center_horizontal"
-                android:layout_span="1"
-                android:layout_weight="1"
-                android:text="0" />
-
-            <Button
-                android:id="@+id/button10"
-                style="@android:style/Widget.Button.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="0"
-                android:visibility="invisible" />
-        </TableRow>
-    </TableLayout>
+            android:layout_weight="1"
+            android:visibility="invisible"
+            android:text=" " />
+    </LinearLayout>
 
 </LinearLayout>
