--- a/res/layout/pincode_protected_layout.xml
+++ b/res/layout/pincode_protected_layout.xml
@@ -10,6 +10,7 @@
         android:name="su.whs.widgets.PincodeBox"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_gravity="center"
         tools:layout="@layout/pinbox_widget" />
 
 </FrameLayout>
