--- a/res/layout/whs_checkbox_r.xml
+++ b/res/layout/whs_checkbox_r.xml
@@ -32,6 +32,6 @@
         android:id="@+id/whsCheckBoxMark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right" />
+        android:layout_gravity="right|center_vertical" />
     
 </LinearLayout>
