--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,4 +17,21 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <style name="Theme.Transparent" parent="android:Theme">
+    	<item name="android:windowIsTranslucent">true</item>
+    	<item name="android:windowBackground">@android:color/transparent</item>
+    	<item name="android:windowContentOverlay">@null</item>
+    	<item name="android:windowNoTitle">true</item>
+    	<item name="android:windowIsFloating">false</item>
+    	<item name="android:backgroundDimEnabled">false</item>
+  </style>
+  
+	<style name="OverlayText">
+    <item name="android:textColor">#ffffffff</item>
+    <item name="android:textSize">12sp</item>
+    <item name="android:shadowColor">#000000</item>
+    <item name="android:shadowDx">1</item>
+    <item name="android:shadowDy">1</item>
+    <item name="android:shadowRadius">1</item>
+  </style>
 </resources>
