--- a/res/layout/prefs_password_edit_dialog.xml
+++ b/res/layout/prefs_password_edit_dialog.xml
@@ -17,18 +17,25 @@
         android:text="@string/enter_passcode"
         android:textStyle="bold" />
 
-    
     <EditText
         android:id="@+id/prefsPasswordEditText1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/prefsPasswordEditDlgPrompt1"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:digits="0123456789"
         android:ems="10"
+        android:imeOptions="actionNext"
         android:inputType="numberDecimal"
+        android:nextFocusDown="@+id/prefsPasswordEditText2"
         android:password="true"
-        tools:ignore="Deprecated" />
+        tools:ignore="Deprecated" >
+
+    	<requestFocus/>
+	</EditText>
 
     <TextView
         android:id="@+id/prefsPasswordEditDlgPrompt2"
@@ -45,11 +52,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/prefsPasswordEditDlgPrompt2"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:digits="0123456789"
         android:ems="10"
+        android:imeOptions="actionDone"
         android:inputType="numberDecimal"
         android:password="true"
-        tools:ignore="Deprecated" />    
+        tools:ignore="Deprecated" />
 
     <TextView
         android:id="@+id/prefsPasswordEditMessage"
@@ -60,37 +71,25 @@
         android:gravity="center_horizontal"
         android:textStyle="bold" />
 
-    <TableLayout
-        android:id="@+id/tableLayout1"
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="false"
-        android:layout_below="@+id/prefsPasswordEditMessage"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:gravity="bottom" >
+        android:layout_below="@+id/prefsPasswordEditMessage" >
 
-        <TableRow
-            android:id="@+id/tableRow1"
-            android:layout_width="fill_parent"
+        <Button
+            android:id="@+id/cancelPasswordChangeBtn"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            tools:ignore="UselessParent" >
+            android:layout_weight="0.5"
+            android:text="Cancel" />
 
-            <Button
-                android:id="@+id/cancelPasswordChangeBtn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="Cancel" />
+        <Button
+            android:id="@+id/savePasswordBtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="Ok" />
 
-            <Button
-                android:id="@+id/savePasswordBtn"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="Ok" />
-        </TableRow>
-    </TableLayout>
+    </LinearLayout>
     
 </RelativeLayout>
