--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="transparent_gray">#44000000</color>    
+	<color name="transparent_gray">#44000000</color>
+	<color name="transparent_gray_dark">#88000000</color>    
 </resources>
