--- a/res/layout-normal/pinbox_widget.xml
+++ b/res/layout-normal/pinbox_widget.xml
@@ -13,8 +13,8 @@
         android:background="@android:color/transparent" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:gravity="center"
         android:minWidth="@dimen/pin_pad_min_width"
@@ -36,13 +36,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:drawablePadding="@dimen/app_list_item_margin"
-            android:textIsSelectable="false"
             android:textSize="@dimen/pincode_label_text_size" />
 
         <FrameLayout
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
             android:minWidth="@dimen/pincode_fragment_width" >
 
             <EditText
