--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -1,7 +1,7 @@
 <resources>
   <declare-styleable name="whsCheckBox">
     <attr name="checkBoxAtRight" format="boolean" defaultValue="false" />
-    <attr name="text" format="string"/>
+    <attr name="text" format="string|reference"/>
     <attr name="summary" format="string" />
     <attr name="summaryOn" format="string" />
     <attr name="summaryOff" format="string" />
@@ -15,6 +15,34 @@
         <attr name="exampleDimension" format="dimension" />
         <attr name="exampleColor" format="color" />
         <attr name="exampleDrawable" format="color|reference" />
+    </declare-styleable>
+    <declare-styleable name="whsHelpOverlay">
+        <attr name="screens" format="reference" localization="suggested" />
+        <attr name="mode" format="string" />
+        <attr name="nextButtonText" format="reference|string" />
+        <attr name="readyButtonText" format="reference|string" />
+    </declare-styleable>
+    <declare-styleable name="whsScreen">
+        <attr name="highlight">
+            <enum name="rect" value="1"/>
+            <enum name="circle" value="2"/>
+        </attr>
+        <attr name="rectCornersRadius" format="float|reference"/>
+        <attr name="position">
+            <enum name="leftTop" value="1"/>
+            <enum name="leftBottom" value="2"/>
+            <enum name="leftAbove" value="3"/>
+            <enum name="leftBelow" value="4"/>
+            <enum name="rightTop" value="5"/>
+            <enum name="rightBottom" value="6"/>
+            <enum name="rightAbove" value="7"/>
+            <enum name="rightBelow" value="8"/>
+            <enum name="auto" value="0"/>
+        </attr>
+        <attr name="font" format="string"/>
+        <attr name="disclaimer" format="string|reference"/>
+        <attr name="textSize" format="float|integer|reference"/>
+        <attr name="widget" format="reference"/>
     </declare-styleable>
   
 </resources>
